--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -119,6 +119,30 @@
 
         <div class="row gy-4">
 
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Project information</h3>
+              <ul>
+                <form class="form" id="a-form" method="POST" action="ajouterquizz.php">
+                <div class="form-group">
+                  <label>nom quizz</label>
+                  <input class="form-control" placeholder="Enter text" name="nomquizz"><hr>
+                  <label>nombre de question</label>
+                  <input class="form-control" type="number" id="nbquest" name="nbquest" min="5" max="40">
+                  <br><center><button type="submit" class="btn btn-default">Submit Button</button></center>
+                </div>
+            </form>
+            
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <h2>This is an example of portfolio detail</h2>
+              <p>
+                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              </p>
+            </div>
+          </div>
+
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -137,30 +161,6 @@
 
               </div>
               <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <form class="form" id="a-form" method="POST" action="ajouterquizz.php" onclick="ajouterquestion.php">
-                <div class="form-group">
-                  <label>nom quizz</label>
-                  <input class="form-control" placeholder="Enter text" name="nomquizz"><hr>
-                  <label>nombre de question</label>
-                  <input class="form-control" type="number" id="nbquest" name="nbquest" min="5" max="40">
-                  <br><center><button type="submit" class="btn btn-default">Submit Button</button></center>
-                </div>
-            </form>
-            
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
             </div>
           </div>
 
