--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -119,7 +119,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <div class="col-lg-5">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
@@ -143,8 +143,26 @@
             </div>
           </div>
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
+          <div class="col-lg-6">
+            
+              <div class="portfolio-info">
+                <h3>Project information</h3>
+                <ul>
+                  <form class="form"  method="POST" action="ajoutercours.php">
+                  <div class="form-group">
+                    <label>nom cours</label>
+                    <input class="form-control" placeholder="Enter text" name="nomcours" ><hr>
+                    <label>type cours</label>
+                    <input class="form-control" name="typecours" >
+                    <label>cours</label>
+                    <input class="form-control" placeholder="Enter text" name="coursdes" ><hr>
+                    <br><button type="submit" class="btn btn-default">Submit Button</button>
+                  </div>>
+              </form>
+              
+                </ul>
+              </div>
+            <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
@@ -162,7 +180,7 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
